# mgz-utils

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  config.h.in
cmake/: MgzUtils.cmake
ext/: CMakeLists.txt
include/compress/: compressor.h  mgz_stream.h  z.h
include/compress/archive/: lib_zip.h  unzip.h  zip.h
include/compress/compressor/: gzip.h  pkzip.h  raw.h  zlib.h
include/compress/internal/: flate.h
include/compress/zip/: common.h  compress.h  uncompress.h
include/debug/: hexdumper.h
include/internal/: varg.h
include/internal/windows/: strptime.c
include/io/: faststream.h  file.h  filesystem.h  properties.h  stream.h
include/mgz/: export.h
include/net/: mime.h  uri.h
include/regex/: re.h
include/security/: adler32.h  crc32.h  md5.h  ripem.h  sha1.h  sha2.h
include/util/: any.h  datetime.h  exception.h  getopt.h  map.h  singleton.h  string.h  types.h  units.h  vector.h
include/util/internal/: strptime.h  varg.h
include/xml/: xml.h
src/: CMakeLists.txt  mgz-all.pc.in
src/compress/: CMakeLists.txt  compressor.cc  mgz-compress.pc.in  mgz-compress.rc.in  z.cc
src/compress/archive/: unzip.cc  zip.cc
src/compress/archive/internal/: common.cc
src/compress/compressor/: gzip.cc  pkzip.cc  raw.cc  zlib.cc
src/compress/internal/: deflate.c  inflate.c
src/compress/zip/: common.cc  compress.cc  uncompress.cc
src/debug/: CMakeLists.txt
src/io/: CMakeLists.txt  faststream.cc  file.cc  filesystem.cc  mgz-io.pc.in  mgz-io.rc.in  properties.cc  stream.cc
src/net/: CMakeLists.txt  mgz-net.pc.in  mgz-net.rc.in  mime.cc  uri.cc
src/regex/: CMakeLists.txt  mgz-regex.pc.in  mgz-regex.rc.in  re.cc  trex.c
src/security/: CMakeLists.txt  adler32.cc  crc32.cc  md5.cc  mgz-security.pc.in  mgz-security.rc.in  ripem.cc  sha1.cc  sha2.cc
src/util/: CMakeLists.txt  datetime.cc  getopt.cc  mgz-util.pc.in  mgz-util.rc.in  string.cc
src/util/internal/: strptime.c  varg.cc
src/xml/: CMakeLists.txt  mgz-xml.pc.in  mgz-xml.rc.in  xml.cc  xmlerror.cc  xmlparser.cc
test/: CMakeLists.txt  compress_unittest.cc  config-test.h.in  crc32_unittest.cc  datetime_unittest.cc  exception_unittest.cc  faststream_unittest.cc  file_unittest.cc  filesystem_unittest.cc  getopt_unittest.cc  md5_unittest.cc  mime_unittest.cc  properties_unittest.cc  re_unittest.cc  ripem_unittest.cc  sha1_unittest.cc  sha2_unittest.cc  string_unittest.cc  types_unittest.cc  uri_unittest.cc  zip_unittest.cc
test/data/file/: SetAndTestPermissions.txt  example.txt  fileWithPerms0654.txt  x-flag-not-set.sh  x-flag-set.sh
test/data/file/HelloWorld.app/Contents/: Info.plist
test/data/file/HelloWorld.app/Contents/Resources/: applet.rsrc
test/data/file/HelloWorld.app/Contents/Resources/Scripts/: main.scpt
test/data/properties/: sample.properties  sample.xml
test/data/zip/: big-test.txt  test.txt  test2.txt  z_test_deflate.txt
test/data/zip/to_zip_dir/subdir/: file2-1.0.0.txt  file4.txt
